Routes, Models, Controllers

--- a/Code/JavaScript/MongoDB/Server/.env
+++ b/Code/JavaScript/MongoDB/Server/.env
@@ -1,4 +1,4 @@
-URI=mongodb+srv://jaydandowler:<password>@cluster0.istweo7.mongodb.net/?retryWrites=true&w=majority
+URI=mongodb+srv://jaydandowler:1Supercross@cluster0.istweo7.mongodb.net/destinationdb?retryWrites=true&w=majority
 PORT=8000
 # DB=my_db
 # mongo atlas connection
