--- a/Code/Java/Project/server/src/main/resources/application.properties
+++ b/Code/Java/Project/server/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 # Where are jsp files? HERE!
 spring.mvc.view.prefix=/WEB-INF/
 # Data Persistence
-spring.datasource.url=jdbc:mysql://localhost:3306/books_schema
+spring.datasource.url=jdbc:mysql://localhost:3306/propfolio
 spring.datasource.username=root
-spring.datasource.password=$Shatter!
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 # For Update and Delete method hidden inputs
 spring.mvc.hiddenmethod.filter.enabled=true
+
+
