--- a/Code/Java/Project/client/package.json
+++ b/Code/Java/Project/client/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "proxy": "http://localhost:8080/",
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "dependencies": {
     "axios": "^1.5.0",
     "react": "^18.2.0",
