--- a/Code/Java/Project/server/pom.xml
+++ b/Code/Java/Project/server/pom.xml
@@ -39,6 +39,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
         <!-- DEPENDENCIES FOR DISPLAYING JSPS AND USING JSTL TAGS -->
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
@@ -87,12 +91,6 @@
             <artifactId>jaxb-runtime</artifactId>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <version>2.0.1.Final</version>
-        </dependency>
-
     </dependencies>
 
     <build>
